--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tmcw/togeojson": "^5.8.1",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-filelayer": "^1.2.0",
+    "leaflet-gpx": "^1.7.0",
+    "mapbox-gl": "^3.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
