--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-filelayer": "^1.2.0",
     "leaflet-gpx": "^1.7.0",
