--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "leaflet-gpx": "^1.7.0",
     "mapbox-gl": "^3.5.1",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
