--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-scrollable-list": "^1.3.1",
     "react-slider": "^2.0.6",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
