--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-scrollable-list": "^1.3.1",
     "react-slider": "^2.0.6",
+    "recharts": "^2.12.7",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4"
