--- a/package.json
+++ b/package.json
@@ -24,18 +24,22 @@
     "leaflet": "^1.9.4",
     "leaflet-filelayer": "^1.2.0",
     "leaflet-gpx": "^1.7.0",
+    "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^3.5.1",
+    "pexels": "^1.4.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-custom-control": "^1.4.0",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "react-scrollable-list": "^1.3.1",
     "react-slider": "^2.0.6",
+    "react-slideshow-image": "^4.3.1",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
