--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
+    "@mui/material": "^5.16.7",
+    "@mui/x-date-pickers": "^7.12.1",
     "@nextui-org/react": "^2.4.6",
     "@react-google-maps/api": "^2.19.3",
+    "@react-stately/data": "^3.11.6",
     "@reduxjs/toolkit": "^2.2.6",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +20,7 @@
     "@tmcw/togeojson": "^5.8.1",
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
     "framer-motion": "^11.3.19",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -26,6 +29,7 @@
     "leaflet-gpx": "^1.7.0",
     "leaflet.markercluster": "^1.5.3",
     "mapbox-gl": "^3.5.1",
+    "material-ui-confirm": "^3.0.16",
     "pexels": "^1.4.0",
     "react": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
@@ -40,6 +44,7 @@
     "react-scrollable-list": "^1.3.1",
     "react-slider": "^2.0.6",
     "react-slideshow-image": "^4.3.1",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
     "redux": "^5.0.1",
