--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 127.0.0.1=WainwrightLogbook.local
+export const API_BASE_URL = "http://localhost:5286/api/";
+export const API_KEY = "AIzaSyDKWZbZ93fuajxbQukXEy7N-nFEgdTKu-g";
